Add ScriptMetric context to allow list
Signed-off-by: Vijayan Balasubramanian <balasvij@amazon.com>